--- a/success.html
+++ b/success.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>Responsive Table</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         table.responsive {
             width: 100%;
